syntax = "proto3";
option go_package = "msgProto/MSG_HeartBeat";
package MSG_HeartBeat;

// add by stefanchen 
// server 
enum SUBMSG
{
    Begin = 0; //起点消息

    CS_HeartBeat = 1; //HeartBeat request
    SC_HeartBeat = 2; //HeartBeat response
}

enum ErrorCode
{
    Invalid = 0; //非法数据
    Success = 1; //成功
    Fail = 2; //失败
}

//CS_HeartBeat
message CS_HeartBeat_Req
{
    uint32 SvrPoint = 1;
}

//SC_HeartBeat
message SC_HeartBeat_Rsp
{
    
}
